atualizacao v0.5
