# projetoII_biblioteca/src/controller/PessoaController.ts
@@ -1,75 +1,100 @@
-/*
-import { Request, Response } from "express";
 import { PessoaService } from "../service/PessoaService";
+import { Route, Tags, Post, Body, Res, TsoaResponse, Controller, Put, Delete, Get, Path, Query} from "tsoa";
+import { BasicResponseDto } from "../model/dto/BasicResponseDto";
+import { PessoaRequestDto} from "../model/dto/PessoaDTO/PessoaRequestDto";
+import { PessoaDto } from "../model/dto/PessoaDTO/PessoaDto";
+import { Pessoa } from "../model/entity/Pessoa";
 
-const pessoaService = new PessoaService();
 
-export async function cadastrarPessoa (req: Request, res: Response){
-    try {
-        const novoPessoa = await pessoaService.cadastrarPessoa(req.body);
-        res.status(201).json(
-            {
-                mensagem:"Pessoa adicionado com sucesso!",
-                pessoa:novoPessoa
-            }
-        );
-    } catch (error: any) {
-        res.status(400).json({ message: error.message});
+
+@Route("pessoa")
+@Tags("Pessoa")
+export class PessoaController extends Controller{
+    servicePessoa = new PessoaService();
+
+    @Post()
+    async cadastrarPessoa(
+        @Body() dto: PessoaRequestDto,
+        @Res() fail: TsoaResponse<400, BasicResponseDto>,
+        @Res() success: TsoaResponse<201, BasicResponseDto>
+    ): Promise<void> {
+        try {
+            console.log("TRY DO CONTROLLER", dto);
+            const product = await this.servicePessoa.cadastrarPessoa(dto);
+            return success(201, new BasicResponseDto("Pessoa criado com sucesso!", product));
+        } catch (error: any) {
+            return fail(400, new BasicResponseDto(error.message, undefined));
+        }
     }
-};
-
-export async function atualizarPessoa (req: Request, res: Response){
-    try {
-        const pessoa = await pessoaService.atualizarPessoa(req.body);
-        res.status(200).json(
-            {
-                mensagem:"Pessoa atualizada com sucesso!",
-                pessoa:pessoa
-            }
-        );
-    } catch (error: any) {
-        res.status(400).json({ message: error.message});
+ 
+    @Put()
+    async atualizarPessoa(
+        @Body() dto: PessoaDto,
+        @Res() notFound: TsoaResponse<400, BasicResponseDto>,
+        @Res() success: TsoaResponse<200, BasicResponseDto>
+    ): Promise<void> {
+        try {
+            console.log("TRY DO CONTROLLER ATT", dto);
+            const pessoa = await this.servicePessoa.atualizarPessoa(dto);
+            return success(200, new BasicResponseDto("Pessoa atualizada com sucesso!", pessoa));
+        } catch (error: any) {
+            return notFound(400, new BasicResponseDto(error.message, undefined));
+        }
     }
-};
 
-export async function deletarPessoa (req: Request, res: Response){
-    try {
-        const pessoa = await pessoaService.deletarPessoa(req.body);
-        res.status(200).json(
-            {
-                mensagem:"Pessoa deletada com sucesso!",
-                pessoa:pessoa
-            }
-        );
-    } catch (error: any) {
-        res.status(400).json({ message: error.message});
+    @Delete()
+    async deletarPessoa (
+        @Body() dto: PessoaDto,
+        @Res() notFound: TsoaResponse<400, BasicResponseDto>,
+        @Res() success: TsoaResponse<200, BasicResponseDto>
+    ): Promise<void> {
+        try {
+            const pessoa = await this.servicePessoa.deletarPessoa(dto);
+            return success(200, new BasicResponseDto("Pessoa deletada com sucesso!", pessoa));
+        } catch (error: any) {
+            return notFound(400, new BasicResponseDto(error.message, undefined));
+        }
     }
-};
+    @Get("id/{id}")
+    async filtrarPessoaPorId(
+        @Path() id: number,
+        @Res() notFound: TsoaResponse<400, BasicResponseDto>,
+        @Res() success: TsoaResponse<200, BasicResponseDto>
+    ): Promise<void> {
+        try {
+            const pessoa = await this.servicePessoa.buscaPessoaPorID(id);
+            return success(200, new BasicResponseDto("Pessoa encontrada!", pessoa));
+        } catch (error: any) {
+            return notFound(400, new BasicResponseDto(error.message, undefined));
+        }
+    }
 
-export async function filtrarPessoa (req: Request, res: Response){
-    try {
-        const pessoa = await pessoaService.filtrarPessoa(req.query.id);
-        res.status(200).json(
-            {
-                mensagem:"Pessoa encontrada com sucesso!",
-                pessoa:pessoa
-            }
-        );
-    } catch (error: any) {
-        res.status(400).json({ message: error.message});
-    }
-};
+    @Get("nome")
+    async filtrarProdutoPorNome(
+        @Query() nome: string,
+        @Res() notFound: TsoaResponse<400, BasicResponseDto>,
+        @Res() success: TsoaResponse<200, BasicResponseDto>
+    ): Promise<void> {
+        try {
+            const pessoa = await this.servicePessoa.buscaPessoaPorNome(nome);
+            return success(200, new BasicResponseDto("Produto encontrado!", pessoa));
+        } catch (error: any) {
+            return notFound(400, new BasicResponseDto(error.message, undefined));
 
-export async function listarTodosPessoas (req: Request, res: Response){
-    try {
-        const pessoas = await pessoaService.listarTodosPessoas();
-        res.status(200).json(
-            {
-                mensagem:"Pessoas listadas com sucesso!",
-                pessoas:pessoas
-            }
-            );
-    } catch (error: any) {
-        res.status(400).json({ message: error.message});
+        }
     }
-};*/
+
+    @Get("all")
+    async listarTodosProduto(
+        @Res() notFound: TsoaResponse<400, BasicResponseDto>,
+        @Res() success: TsoaResponse<200, BasicResponseDto>
+    ): Promise<void> {
+        try {
+            const pessoas: Pessoa[] = await this.servicePessoa.listarTodasPessoas();
+            return success(200, new BasicResponseDto("Produtos listados com sucesso!", pessoas));
+        } catch (error: any) {
+            return notFound(400, new BasicResponseDto(error.message, undefined));
+        }
+    }
+
+}
