# projetoII_biblioteca/src/model/dto/PessoaDTO/PessoaRequestDto.ts
@@ -1,0 +1,8 @@
+export class PessoaRequestDto { 
+    nome:string;
+    constructor(nome?:string){
+        this.nome=nome || '';
+        console.log("CLASSE REQUEST DTO PESSOA", nome);
+    }
+    
+}
